<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBeer"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

        <View
            android:id="@+id/gradientView"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:alpha="0.7"
            android:background="@color/color_gradient_image_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBeer" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBeerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TitleTextViewStyle"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivBeer"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTagLine"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvBeerName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstBrewed"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivBeer"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvTagLine" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVolume"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tvFirstBrewed"
            app:layout_constraintTop_toTopOf="@+id/tvFirstBrewed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            style="@style/MyTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginLeft="@dimen/margin_text_view_8dp"
            android:layout_marginRight="@dimen/margin_text_view_8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/gradientView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBeerFormulaTitle"
            style="@style/TitleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_title_text_view"
            android:text="@string/food_pairing"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBeerFormula"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_linear_layout_16dp"
            android:layout_marginRight="@dimen/margin_linear_layout_16dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvBeerFormulaTitle" />

        <LinearLayout
            android:id="@+id/llFormula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_linear_layout_16dp"
            android:layout_marginTop="@dimen/margin_linear_layout_8dp"
            android:layout_marginRight="@dimen/margin_linear_layout_16dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvBeerFormula">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAbv"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIbu"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEbc"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFormula1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_linear_layout_16dp"
            android:layout_marginTop="@dimen/margin_linear_layout_8dp"
            android:layout_marginRight="@dimen/margin_linear_layout_16dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/llFormula">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSrm"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPh"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAttenuationLevel"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBrewersTipsTitle"
            style="@style/TitleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_title_text_view"
            android:text="@string/brewers_tips"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/llFormula1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBrewersTips"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_title_text_view"
            android:paddingEnd="@dimen/padding_title_text_view"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvBrewersTipsTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContributedByTitle"
            style="@style/TitleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text_view_8dp"
            android:paddingStart="@dimen/padding_title_text_view"
            android:text="@string/contributed_by"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvBrewersTips" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContributedBy"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_title_text_view"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvContributedByTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>